--- a/taulaPokemon.html
+++ b/taulaPokemon.html
@@ -26,6 +26,10 @@
     <td><strong>50</strong></td> 
   </tr>
 <!-- Fins aqui -->
+<tr>
+  <td><a href="Hoenn/Hoenn.html"><h2>Hoenn</h2></a></td>
+  <td><strong>135</strong></td> 
+</tr>
 </table>
 <div>
 </body>
